@startuml
interface Movable {
  start()
  stop()
}

interface Flyable {
  fly()
}

class Airplane {
  +name: string
  +color: string
  +start()
  +stop()
  +fly()
}

class Car {
  +name: string
  +color: string
  +start()
  +stop()
}

Movable <--- Airplane
Flyable <--- Airplane
Movable <--- Car

@enduml
